--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -4,7 +4,19 @@ spring:
       enabled: true
       path: /h2-console
 
+  data:
+    web:
+      pageable:
+        one-indexed-parameters: true
+        default-page-size: 5
+
   datasource:
     url: jdbc:h2:mem:hodolog
     username: sa
     password:
+
+  jpa:
+    show-sql: true
+    properties:
+      hibernate:
+        format_sql: true
