--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -15,8 +15,8 @@ spring:
     username: sa
     password:
 
-  jpa:
-    show-sql: true
-    properties:
-      hibernate:
-        format_sql: true
+#  jpa:
+#    show-sql: true
+#    properties:
+#      hibernate:
+#        format_sql: true
