고정인증 로그인기능 구현

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -11,9 +11,15 @@ spring:
         default-page-size: 5
 
   datasource:
-    url: jdbc:h2:mem:hodolog
+    url: jdbc:h2:mem:hodolog;NON_KEYWORDS=USER
     username: sa
     password:
+    driver-class-name: org.h2.Driver
+
+  jpa:
+    defer-datasource-initialization: true
+  sql:
+    init-model: always
 
 #  jpa:
 #    show-sql: true
