--- a/build.gradle
+++ b/build.gradle
@@ -35,6 +35,7 @@ dependencies {
     annotationProcessor 'org.projectlombok:lombok'
 
     implementation 'org.springframework.security:spring-security-crypto'
+    implementation 'org.springframework.session:spring-session-jdbc'
 
     implementation group: 'org.bouncycastle', name: 'bcprov-jdk18on', version: '1.78.1'
 
