--- a/front/tsconfig.json
+++ b/front/tsconfig.json
@@ -10,5 +10,9 @@
     {
       "path": "./tsconfig.cypress-ct.json"
     }
-  ]
+  ],
+  "compilerOptions": {
+    "experimentalDecorators": true,
+    "emitDecoratorMetadata": true
+  }
 }
