Post 클래스 추가

--- a/front/package.json
+++ b/front/package.json
@@ -14,8 +14,10 @@
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix --ignore-path .gitignore"
   },
   "dependencies": {
+    "@js-joda/core": "^5.6.5",
     "axios": "^1.7.7",
     "bootstrap": "^5.3.3",
+    "class-transformer": "^0.5.1",
     "element-plus": "^2.8.8",
     "normalize.css": "^8.0.1",
     "pinia": "^2.0.16",
