반복적인 클래스 인스턴스 변환 개선

--- a/front/tsconfig.json
+++ b/front/tsconfig.json
@@ -13,6 +13,9 @@
   ],
   "compilerOptions": {
     "experimentalDecorators": true,
-    "emitDecoratorMetadata": true
-  }
+    "emitDecoratorMetadata": true,
+    "types": ["vite/client"],
+    "noImplicitAny": false
+  },
+  "include": ["src", "env.d.ts"]
 }
