--- a/front/tsconfig.app.json
+++ b/front/tsconfig.app.json
@@ -7,6 +7,7 @@
     "baseUrl": ".",
     "experimentalDecorators": true,
     "emitDecoratorMetadata": true,
+    "noImplicitAny": false,
     "paths": {
       "@/*": ["./src/*"]
     }
