--- a/front/tsconfig.config.json
+++ b/front/tsconfig.config.json
@@ -1,10 +1,11 @@
 {
   "extends": "@vue/tsconfig/tsconfig.node.json",
-  "include": ["vite.config.*", "vitest.config.*", "cypress.config.*"],
+  "include": ["vite.config.*", "vitest.config.*", "cypress.config.*", "src", "env.d.ts"],
   "compilerOptions": {
     "composite": true,
     "experimentalDecorators": true,
     "emitDecoratorMetadata": true,
-    "types": ["node"]
-  }
+    "types": ["node", "vite/client"],
+    "noImplicitAny": false
+  },
 }
