프론트 빌드하기 (+ 최신 패키지 업데이트)

--- a/front/tsconfig.config.json
+++ b/front/tsconfig.config.json
@@ -1,6 +1,6 @@
 {
   "extends": "@vue/tsconfig/tsconfig.node.json",
-  "include": ["vite.config.*", "vitest.config.*", "cypress.config.*", "src", "env.d.ts"],
+  "include": ["vite.config.*", "vitest.config.*", "cypress.config.*", "env.d.ts"],
   "compilerOptions": {
     "composite": true,
     "experimentalDecorators": true,
