--- a/front/package.json
+++ b/front/package.json
@@ -15,36 +15,37 @@
   },
   "dependencies": {
     "@js-joda/core": "^5.6.5",
-    "axios": "^1.7.7",
-    "bootstrap": "^5.3.3",
+    "@tsconfig/node20": "^20.1.6",
+    "axios": "^1.10.0",
+    "bootstrap": "^5.3.7",
     "class-transformer": "^0.5.1",
-    "element-plus": "^2.8.8",
+    "element-plus": "^2.10.2",
     "normalize.css": "^8.0.1",
-    "pinia": "^2.0.16",
+    "pinia": "^3.0.3",
     "reflect-metadata": "^0.2.2",
     "tsyringe": "^4.10.0",
-    "vue": "^3.2.37",
-    "vue-router": "^4.1.2"
+    "vue": "^3.5.17",
+    "vue-router": "^4.5.1"
   },
   "devDependencies": {
-    "@rushstack/eslint-patch": "^1.1.0",
-    "@types/node": "^16.11.45",
-    "@vitejs/plugin-vue": "^3.0.1",
-    "@vitejs/plugin-vue-jsx": "^2.0.0",
-    "@vue/eslint-config-prettier": "^7.0.0",
-    "@vue/eslint-config-typescript": "^11.0.0",
-    "@vue/tsconfig": "^0.1.3",
-    "cypress": "^10.3.0",
-    "eslint": "^8.5.0",
-    "eslint-plugin-cypress": "^2.12.1",
-    "eslint-plugin-vue": "^9.0.0",
+    "@rushstack/eslint-patch": "^1.11.0",
+    "@types/node": "^24.0.3",
+    "@vitejs/plugin-vue": "^6.0.0",
+    "@vitejs/plugin-vue-jsx": "^5.0.0",
+    "@vue/eslint-config-prettier": "^10.2.0",
+    "@vue/eslint-config-typescript": "^14.5.1",
+    "@vue/tsconfig": "^0.7.0",
+    "cypress": "^14.5.0",
+    "eslint": "^9.10.0",
+    "eslint-plugin-cypress": "^3.2.0",
+    "eslint-plugin-vue": "^9.25.0",
     "npm-run-all": "^4.1.5",
-    "prettier": "^2.5.1",
+    "prettier": "^3.6.0",
     "sass": "^1.89.2",
-    "start-server-and-test": "^1.14.0",
-    "typescript": "~4.7.4",
-    "vite": "^3.0.1",
-    "vue": "^3.2.37",
-    "vue-tsc": "^0.38.8"
+    "start-server-and-test": "^2.0.12",
+    "typescript": "~5.8.3",
+    "vite": "^7.0.0",
+    "vue": "^3.5.17",
+    "vue-tsc": "^2.2.10"
   }
 }
